Fixes spacing

--- a/src/components/section.module.scss
+++ b/src/components/section.module.scss
@@ -13,7 +13,7 @@
 	}
 }
 .articleHeading {
-	margin-bottom: 0;
+	margin: 10px 0 0;
 	a {
 		color: black;
 		text-decoration: none;
@@ -38,15 +38,11 @@
 		}
 	}
 }
-// .sectionContent {
-// 	@include desktop {
-// 		display: flex;
-// 		justify-content: space-between;
-// 		& > div {
-// 			max-width: 30%;
-// 		}
-// 	}
-// }
+
+// applies to all section content
+.sectionContent .intro p {
+	margin-top: 0;
+}
 
 .gradgreenblue {
 	background: linear-gradient(
@@ -135,6 +131,9 @@
 		display: grid;
 		gap: 1rem;
 		grid-template-columns: 1fr 1fr 1fr;
+	}
+	@include desktop {
+		gap: 4.375rem;
 	}
 }
 
